# canopyold

./: .gitignore  README.md
backend/: Cargo.toml
backend/migrations/: 20230712223347_v0.0.0_topics.up.sql  20230712233116_v0.0.1_topics.down.sql  20230712233116_v0.0.1_topics.up.sql  20230713062715_0.0.2_topics.down.sql  20230713062715_0.0.2_topics.up.sql  20230715043242_0.1.3_topics.sql.down.sql  20230715043242_0.1.3_topics.sql.up.sql  20230717001400_0.1.4_business_documents.down.sql  20230717001400_0.1.4_business_documents.up.sql  20230717040329_0.1.5_business_documents.down.sql  20230717040329_0.1.5_business_documents.up.sql
backend/src/: app_state.rs  error.rs  main.rs
backend/src/database/: mod.rs
backend/src/database/dal/: bdoc.rs  bdoc_dir.rs  mod.rs  resource.rs  topic.rs
backend/src/models/: bdoc.rs  mod.rs  resource.rs  search.rs  topic.rs
backend/src/models/components/: link.rs  mod.rs  paragraph.rs
backend/src/routes/: bdoc.rs  mod.rs  resource.rs  search.rs  topic.rs
backend/src/search/: mod.rs
frontend/: package-lock.json  package.json  rollup.config.js
frontend-kit/: package-lock.json  package.json
frontend-kit/src/lib/: index.js
frontend-kit/src/lib/doc/: Template.svelte
frontend-kit/src/routes/: +page.server.js  +page.svelte  data.js
frontend/data/: scraped_data.json
frontend/src/: App.svelte
frontend/src/components/: FilterPane.svelte  ResultList.svelte  SearchBar.svelte  SearchResultCard.svelte
frontend/src/lib/: TopBar.svelte  index.ts
frontend/src/routes/: +page.svelte
scraping/: scrape.py
(+15 files in other folders)
