[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros", "full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1.27"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono" ] }
tracing-subscriber = "0.3.17"
dotenvy = "0.15.7"
chrono = { version = "0.4.26", features = ["serde"] }
axum-macros = "0.3.7"
